Added 6 new scenarios.

--- a/Scenarios/Scenario11.html
+++ b/Scenarios/Scenario11.html
@@ -5,7 +5,7 @@
    with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
    A copy of the license is included in the folder entitled "GNU
    Free Documentation License".
-   Scenario 6: Single payment with interest and mining and an attempt to break holding.
+   Scenario 11: Single payment with interest without mining.
    -->
 <html>
    <head></head>
@@ -39,7 +39,7 @@
             }, function (e, managerContract) {
              if (typeof managerContract.address !== 'undefined') {
                 console.log('Token manager contract mined, address: ' + managerContract.address + ' tx: ' + managerContract.transactionHash);
-                console.log('SCENARIO 6: SINGLE PAYMENT WITH INTEREST AND MINING AND ATTEMPT TO BREAK HOLDING (EXPECTED RESULT: VM EXCEPTION)');
+                console.log('SCENARIO 11: SINGLE PAYMENT WITH INTEREST WITHOUT MINING');
                 var index = 0;
                 var gasAmount = 300000; // You can optimize the gas for each function call, as will be done in the app.       
                 // Set the new token contract address in the token manager.
@@ -65,8 +65,8 @@
                 var amountToBorrow = new web3.BigNumber('2000000000000000000000'); // Amount in 10^-18 tokens (2000 tokens);
                 var loanLengthInBlocks = new web3.BigNumber('10'); // Use a small number for testing.
                 var interest = new web3.BigNumber('200000000000000000000'); // Interest in 10^-18 tokens (200 tokens)
-                var willMine = Boolean(1); // Whether the loan will mine upon completion (see documentation for more info).
-                var loanMessage = 'Will pay you back next week...'; // This is an experimental feature. May also use bytes32.
+                var willMine = Boolean(0); // Whether the loan will mine upon completion (see documentation for more info).
+                var loanMessage = 'Will pay you back by next week :)'; // This is an experimental feature. May also use bytes32.
                 // You can import additional balance to the lender here:
                 var testBalance = new web3.BigNumber('2000000000000000000000'); // 2000 tokens imported to the lender.
                 mainContract.addTestBalance(testBalance, {
@@ -97,7 +97,7 @@
                         from: lender,
                         gas: gasAmount
                     })
-                    // You'll notice the status of the loan has now changed when you print it out:
+                // You'll notice the status of the loan has now changed when you print it out:
                 loan = managerContract.loans.call(index);
                 console.log('Loan is active (status=2): ' + loan);
                 // The borrower's balance has been increased by the loan amount.
@@ -115,33 +115,9 @@
                 // Borrower has repaid:
                 console.log('Balance of borrower after repaying loan: ' + mainContract.balanceOf.call(borrower))
                 loan = managerContract.loans.call(index);
-                // Loan status is in holding:
-                console.log('Loan is now in holding (status 3): ' + loan);
-                console.log('Simulating an attempt to break holding via a regular transfer...');
-                console.log('Expected result: VM Exception');
-                var amountToTransfer = new web3.BigNumber('200000000000000000001'); // Transfer cannot be larger than non-holding balance (200000000000000000000) otherwise it breaks holding.
-                mainContract.transfer(borrower, amountToTransfer, {
-                        from: lender,
-                        gas: gasAmount
-                    })
-                // Reduce the transfer amount to reach the code below:
-                // Lender needs to wait to claim reward.
-                for (i = 0; i < 6; i++) {
-                    managerContract.advanceBlock();
-                }
-                console.log('Lender has waited out the holding period, so borrower and lender can claim rewards.');
-                console.log('Lender is triggering distribution of rewards...');
-                managerContract.requestRewardForLoanAtIndex(index, {
-                    from: lender,
-                    gas: gasAmount
-                });
-                // Loan status has changed to complete
-                loan = managerContract.loans.call(index);
                 console.log('Loan is complete (status 7): ' + loan);
-                console.log('Checking the balances of the lender and borrower shows that rewards have been added:')
-                console.log('Balance of borrower: ' + mainContract.balanceOf.call(borrower))
-                console.log('Balance of lender: ' + mainContract.balanceOf.call(lender))
-                }
+                console.log('Scenario 11 complete.');
+             }
           })
               }
           })
