--- a/Scenarios/Scenario2.html
+++ b/Scenarios/Scenario2.html
@@ -80,7 +80,7 @@
                       from: borrower,
                       gas: gasAmount
                   });
-                  // Now we can check our our loan in the loans array:
+                  // Now we can check our loan in the loans array:
                   var loan = managerContract.loans.call(index);
                   console.log('Loan has been requested (status=1): ' + loan);
                   // The lender is starting the loan:
